--- a/launchpad.html
+++ b/launchpad.html
@@ -212,8 +212,8 @@
       U<span class="text-white/60">pc</span>o<span class="text-white/60">mi</span>ng</span>
       L<span class="text-white/60">au</span>n<span class="text-white/60">ch</span>es
     </h2>
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-8">
-      <div class="flex flex-col items-center border border-solid border-white/10 mt-16 mb-80">
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-8 mt-8 mb-20 lg:mt-16 lg:mb-80">
+      <div class="flex flex-col items-center border border-solid border-white/10">
         <img class="h-full w-full object-cover max-w-96 lg:max-h-[264px] border border-white/5" src="img/placeholder.png" alt="placeholder">
         <div class="flex flex-col p-6 lg:p-8 w-full">
           <div class="flex items-center gap-4 text-xl lg:text-2xl font-medium">
@@ -255,7 +255,7 @@
           </button>
         </div>
       </div>
-      <div class="flex flex-col items-center border border-solid border-white/10 mt-16 mb-80">
+      <div class="flex flex-col items-center border border-solid border-white/10">
         <img class="h-full w-full object-cover max-h-[264px]" src="img/placeholder.png" alt="placeholder">
         <div class="flex flex-col p-8 w-full">
           <div class="flex items-center gap-4 text-2xl font-medium">
@@ -297,7 +297,7 @@
           </button>
         </div>
       </div>
-      <div class="flex flex-col items-center border border-solid border-white/10 mt-16 mb-80">
+      <div class="flex flex-col items-center border border-solid border-white/10">
         <img class="h-full w-full object-cover max-h-[264px]" src="img/placeholder.png" alt="placeholder">
         <div class="flex flex-col p-8 w-full">
           <div class="flex items-center gap-4 text-2xl font-medium">
@@ -341,15 +341,15 @@
       </div>
     </div>
   </section>
-  <section class="mt-52 mx-auto max-w-[1200px]">
-    <h2 class="text-5xl text-center">
+  <section class="mt-32 lg:mt-52 mx-auto max-w-[1200px] px-6 lg:px-0">
+    <h2 class="text-4xl lg:text-5xl text-center">
       C<span class="text-white/60">om</span>pl<span class="text-white/60">et</span>ed S<span>a</span>l<span>e</span>s
     </h2>
-    <div class="grid grid-cols-3 gap-8">
-      <div class="flex flex-col items-center border border-solid border-white/10 mt-16 mb-80">
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-8 mt-8 mb-20 lg:mt-16 lg:mb-80">
+      <div class="flex flex-col items-center border border-solid border-white/10">
         <div class="flex flex-col p-8 w-full">
-          <div class="flex items-center gap-4 text-2xl font-medium">
-            <img class="w-12 h-12" src="/img/nft.png" alt="nft">
+          <div class="flex items-center gap-4 text-xl lg:text-2xl font-medium">
+            <img class="w-10 h-10 lg:w-12 lg:h-12" src="/img/nft.png" alt="nft">
             Pixelmon
           </div>
           <div class="flex items-center gap-4 mt-8">
@@ -385,21 +385,21 @@
               </svg>
             </a>
           </div>
-          <hr class="border-white/5 my-8"/>
+          <hr class="border-white/5 my-6 lg:my-8"/>
           <div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8">
               ATH ROI:
               <span class="text-white">36.7x</span>
             </div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
               Ticker:
               <span class="text-white">AIT</span>
             </div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
               Total Raise:
               <span class="text-white">$100,000</span>
             </div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
               Sale Type:
               <span class="text-white">Ape Launch</span>
             </div>
@@ -410,10 +410,10 @@
           </button>
         </div>
       </div>
-      <div class="flex flex-col items-center border border-solid border-white/10 mt-16 mb-80">
+      <div class="flex flex-col items-center border border-solid border-white/10">
         <div class="flex flex-col p-8 w-full">
-          <div class="flex items-center gap-4 text-2xl font-medium">
-            <img class="w-12 h-12" src="/img/nft.png" alt="nft">
+          <div class="flex items-center gap-4 text-xl lg:text-2xl font-medium">
+            <img class="w-10 h-10 lg:w-12 lg:h-12" src="/img/nft.png" alt="nft">
             Pixelmon
           </div>
           <div class="flex items-center gap-4 mt-8">
@@ -449,21 +449,21 @@
               </svg>
             </a>
           </div>
-          <hr class="border-white/5 my-8"/>
+          <hr class="border-white/5 my-6 lg:my-8"/>
           <div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8">
               ATH ROI:
               <span class="text-white">36.7x</span>
             </div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
               Ticker:
               <span class="text-white">AIT</span>
             </div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
               Total Raise:
               <span class="text-white">$100,000</span>
             </div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
               Sale Type:
               <span class="text-white">Ape Launch</span>
             </div>
@@ -474,10 +474,10 @@
           </button>
         </div>
       </div>
-      <div class="flex flex-col items-center border border-solid border-white/10 mt-16 mb-80">
+      <div class="flex flex-col items-center border border-solid border-white/10">
         <div class="flex flex-col p-8 w-full">
-          <div class="flex items-center gap-4 text-2xl font-medium">
-            <img class="w-12 h-12" src="/img/nft.png" alt="nft">
+          <div class="flex items-center gap-4 text-xl lg:text-2xl font-medium">
+            <img class="w-10 h-10 lg:w-12 lg:h-12" src="/img/nft.png" alt="nft">
             Pixelmon
           </div>
           <div class="flex items-center gap-4 mt-8">
@@ -513,21 +513,21 @@
               </svg>
             </a>
           </div>
-          <hr class="border-white/5 my-8"/>
+          <hr class="border-white/5 my-6 lg:my-8"/>
           <div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8">
               ATH ROI:
               <span class="text-white">36.7x</span>
             </div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
               Ticker:
               <span class="text-white">AIT</span>
             </div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
               Total Raise:
               <span class="text-white">$100,000</span>
             </div>
-            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            <div class="flex items-center justify-between text-base lg:text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
               Sale Type:
               <span class="text-white">Ape Launch</span>
             </div>
@@ -540,10 +540,10 @@
       </div>
     </div>
   </section>
-  <section class="mt-32 border-y border-solid border-white/10 w-full">
-    <div class="mx-auto max-w-[1200px] flex justify-between py-16">
-      <div class="flex items-center gap-6">
-        <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <section class="mt-20 lg:mt-32 border-y border-solid border-white/10 w-full">
+    <div class="mx-auto max-w-[1200px] flex flex-col lg:flex-row justify-between lg:items-center px-6 lg:px-0 py-8 lg:py-16">
+      <div class="flex flex-col lg:flex-row lg:items-center gap-6 mb-6 lg:mb-0">
+        <svg class="w-14 h-14 lg:w-20 lg:h-20" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M51.5001 38.5005C51.5001 39.6498 51.0435 40.752 50.2309 41.5646C49.4182 42.3773 48.316 42.8338 47.1667 42.8338H21.1667L12.5001 51.5005V16.8338C12.5001 15.6846 12.9566 14.5823 13.7693 13.7697C14.5819 12.957 15.6841 12.5005 16.8334 12.5005H47.1667C48.316 12.5005 49.4182 12.957 50.2309 13.7697C51.0435 14.5823 51.5001 15.6846 51.5001 16.8338V38.5005Z"
             stroke="white" stroke-width="4.4443" stroke-linecap="round" stroke-linejoin="round"/>
@@ -557,7 +557,7 @@
         </div>
       </div>
       <button
-        class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
+        class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider w-fit">
         Member Access
       </button>
     </div>
