--- a/launchpad.html
+++ b/launchpad.html
@@ -104,7 +104,7 @@
         </linearGradient>
       </defs>
     </svg>
-    <div class="flex justify-center items-center flex-col max-w-xl mx-auto px-6 lg:px-0">
+    <div class="flex justify-center items-center flex-col max-w-xl mx-auto px-6 lg:px-0 animate-fade">
       <img class="w-20 lg:h-24" src="img/grape-no-text.png" alt="logo">
       <h1 class="mt-6 text-4xl lg:text-6xl">
         <span class="font-semibold">GRAPE,</span>
