--- a/marketplace.html
+++ b/marketplace.html
@@ -33,69 +33,81 @@
 </head>
 
 <body class="bg-black-900 text-white">
-<div class="p-2">
-  <header class="relative h-32 px-28 bg-black-800 flex items-center justify-between overflow-hidden">
+<div class="lg:p-2">
+  <header
+    class="relative h-24 lg:h-32 px-5 lg:12 xl:px-28 bg-black-800 flex items-center justify-between overflow-hidden">
     <div class="bg-purple-700 blur-[50px] absolute left-28 -top-28 z-0 w-[200px] h-[200px]"></div>
-    <div class="flex items-center gap-16 z-10">
+    <div class="flex items-center justify-between lg:justify-start w-full lg:w-fit gap-16 z-10">
+      <svg class="block lg:hidden" width="24" height="24" viewBox="0 0 24 24" fill="none"
+           xmlns="http://www.w3.org/2000/svg">
+        <path d="M5.49762 12H18.5027" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M5.49762 16.0017H18.5027" stroke="white" stroke-width="1.5" stroke-linecap="round"
+              stroke-linejoin="round"/>
+        <path d="M5.49731 7.99832H18.5024" stroke="white" stroke-width="1.5" stroke-linecap="round"
+              stroke-linejoin="round"/>
+      </svg>
       <a href="#">
         <img class="h-14" src="img/logo.png" alt="logo">
       </a>
-      <nav class="text-white/60 flex items-center gap-16">
-        <a class="uppercase text-base tracking-wide" href="#">Product</a>
-        <a class="uppercase text-base tracking-wide" href="#">Explore</a>
-        <a class="uppercase text-base tracking-wide" href="#">Save & Share</a>
-        <a class="uppercase text-base tracking-wide" href="#">AI Analysis</a>
+      <nav class="text-white/60 hidden lg:flex items-center gap-16">
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">Product</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">Explore</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">Save & Share</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">AI Analysis</a>
       </nav>
+      <div></div>
     </div>
-    <button class="uppercase bg-white/10 px-8 text-white h-10 z-10 text-sm font-bold tracking-wider">Get Member Access
+    <button
+      class="hidden lg:block uppercase bg-white/10 px-8 text-white h-10 z-10 text-sm font-bold tracking-wider hover:bg-white hover:text-black-900 transition">
+      Get Member Access
     </button>
     <div class="bg-purple-700 blur-[50px] absolute right-28 -bottom-28 z-0 w-[200px] h-[200px]"></div>
   </header>
 </div>
 <main>
-  <section class="mt-20 mx-auto max-w-[1200px]">
-    <div class="flex items-center justify-between">
-      <h1 class="uppercase text-[40px]">M<span class="text-white/60">a</span>rk<span
+  <section class="mt-6 lg:mt-20 mx-auto max-w-[1200px] px-6 lg:px-0">
+    <div class="flex flex-col lg:flex-row lg:items-center justify-between">
+      <h1 class="uppercase text-2xl lg:text-[40px] leading-[64px]">M<span class="text-white/60">a</span>rk<span
         class="text-white/60">e</span>tp<span
         class="text-white/60">l</span>ace
       </h1>
-      <div class="flex items-center gap-4">
-        <div class="flex items-center gap-4">
+      <div class="flex items-center gap-4 border-y border-y-white/5 lg:border-none">
+        <div class="flex items-center w-full gap-4 py-5">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M4 11C4 7.13401 7.13401 4 11 4C14.866 4 18 7.13401 18 11C18 12.8858 17.2543 14.5974 16.0417 15.8561C16.0073 15.8825 15.9743 15.9114 15.9428 15.9429C15.9113 15.9744 15.8824 16.0074 15.856 16.0418C14.5973 17.2543 12.8857 18 11 18C7.13401 18 4 14.866 4 11ZM16.6176 18.0319C15.078 19.2635 13.125 20 11 20C6.02944 20 2 15.9706 2 11C2 6.02944 6.02944 2 11 2C15.9706 2 20 6.02944 20 11C20 13.125 19.2635 15.0781 18.0319 16.6177L21.707 20.2929C22.0975 20.6834 22.0975 21.3166 21.707 21.7071C21.3165 22.0976 20.6833 22.0976 20.2928 21.7071L16.6176 18.0319Z"
                   fill="white" fill-opacity="0.4"/>
           </svg>
-          <input class="placeholder:uppercase bg-transparent outline-none" type="text" placeholder="Search">
+          <input class="placeholder:uppercase bg-transparent outline-none w-full" type="text" placeholder="Search">
         </div>
-        <select class="bg-transparent">
+        <select class="bg-transparent w-full py-5">
           <option>Recommended</option>
         </select>
       </div>
     </div>
-    <div class="flex items-center gap-8 mt-16">
+    <div class="flex items-center gap-4 lg:gap-8 mt-6 lg:mt-16 overflow-x-auto">
       <div
-        class="w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
+        class="min-w-[173px] w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
         Mystic Axie
       </div>
       <div
-        class="w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
+        class="min-w-[173px] w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
         ORIGIN Axie
       </div>
       <div
-        class="w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
+        class="min-w-[173px] w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
         Japanese Axie
       </div>
       <div
-        class="w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
+        class="min-w-[173px] w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
         Xmas Axie
       </div>
       <div
-        class="w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
+        class="min-w-[173px] w-[173px] h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
         Summer Axie
       </div>
       <div
-        class="w-[173px] h-[144px] text-sm font-semibold text-green-900 flex justify-center items-center border border-solid border-white/5">
+        class="min-w-[173px] w-[173px] h-[144px] text-sm font-semibold text-green-900 flex justify-center items-center border border-solid border-white/5">
         All Categories
         <svg class="ml-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M7.5 8L11 12L7.5 16" stroke="#01AEA5" stroke-width="1.5" stroke-linecap="round"
@@ -105,9 +117,9 @@
       </div>
     </div>
   </section>
-  <section class="mt-16 mx-auto max-w-[1200px]">
-    <h4 class="leading-normal text-2xl font-semibold">527,226 NFT's</h4>
-    <div class="grid grid-cols-4 gap-8 mt-8">
+  <section class="mt-10 lg:mt-16 mx-auto max-w-[1200px] px-6 lg:px-0">
+    <h4 class="leading-normal text-xl lg:text-2xl font-semibold">527,226 NFT's</h4>
+    <div class="grid grid-cols-1 lg:grid-cols-4 gap-6 lg:gap-8 mt-8">
       <div class="flex flex-col border border-solid border-white/5">
         <img src="img/placeholder.png" alt="placeholder">
         <div class="p-6">
@@ -145,7 +157,7 @@
         </div>
       </div>
     </div>
-    <div class="flex justify-center items-center mt-16">
+    <div class="flex justify-center items-center mt-8 lg:mt-16">
       <div class="flex items-center divide-x divide-white/5 border border-solid border-white/5">
         <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -155,7 +167,6 @@
           </svg>
         </div>
         <div class="h-14 w-14 flex items-center justify-center text-green-900 bg-gray-900/5 cursor-pointer">1</div>
-        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">2</div>
         <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
           <svg width="20" height="6" viewBox="0 0 20 6" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -163,7 +174,6 @@
               fill="white" fill-opacity="0.64"/>
           </svg>
         </div>
-        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">9</div>
         <div class="h-14 w-14 flex items-center justify-center cursor-pointer">10</div>
         <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -175,10 +185,10 @@
       </div>
     </div>
   </section>
-  <section class="mt-32 border-y border-solid border-white/10 w-full">
-    <div class="mx-auto max-w-[1200px] flex justify-between py-16">
-      <div class="flex items-center gap-6">
-        <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <section class="mt-20 lg:mt-32 border-y border-solid border-white/10 w-full">
+    <div class="mx-auto max-w-[1200px] flex flex-col lg:flex-row justify-between lg:items-center px-6 lg:px-0 py-8 lg:py-16">
+      <div class="flex flex-col lg:flex-row lg:items-center gap-6 mb-6 lg:mb-0">
+        <svg class="w-14 h-14 lg:w-20 lg:h-20" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M51.5001 38.5005C51.5001 39.6498 51.0435 40.752 50.2309 41.5646C49.4182 42.3773 48.316 42.8338 47.1667 42.8338H21.1667L12.5001 51.5005V16.8338C12.5001 15.6846 12.9566 14.5823 13.7693 13.7697C14.5819 12.957 15.6841 12.5005 16.8334 12.5005H47.1667C48.316 12.5005 49.4182 12.957 50.2309 13.7697C51.0435 14.5823 51.5001 15.6846 51.5001 16.8338V38.5005Z"
             stroke="white" stroke-width="4.4443" stroke-linecap="round" stroke-linejoin="round"/>
@@ -192,18 +202,18 @@
         </div>
       </div>
       <button
-        class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
+        class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider w-fit">
         Member Access
       </button>
     </div>
   </section>
 </main>
 <footer class="border-y border-solid border-white/10 w-full">
-  <div class="mx-auto max-w-[1200px] flex justify-between py-16">
+  <div class="mx-auto max-w-[1200px] flex flex-col lg:flex-row justify-between gap-8 py-8 px-6 lg:px-0 lg:py-16">
     <div class="text-sm text-white/60">Copyright © 2024 Chainmind. All rights reserved.</div>
     <div class="text-sm text-white/60 flex items-center gap-10">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Use</a>
+      <a class="hover:text-white transition" href="#">Privacy Policy</a>
+      <a class="hover:text-white transition" href="#">Terms of Use</a>
     </div>
   </div>
 </footer>
