--- a/categories.html
+++ b/categories.html
@@ -33,28 +33,40 @@
 </head>
 
 <body class="bg-black-900 text-white">
-<div class="p-2">
-  <header class="relative h-32 px-28 bg-black-800 flex items-center justify-between overflow-hidden">
+<div class="lg:p-2">
+  <header
+    class="relative h-24 lg:h-32 px-5 lg:12 xl:px-28 bg-black-800 flex items-center justify-between overflow-hidden">
     <div class="bg-purple-700 blur-[50px] absolute left-28 -top-28 z-0 w-[200px] h-[200px]"></div>
-    <div class="flex items-center gap-16 z-10">
+    <div class="flex items-center justify-between lg:justify-start w-full lg:w-fit gap-16 z-10">
+      <svg class="block lg:hidden" width="24" height="24" viewBox="0 0 24 24" fill="none"
+           xmlns="http://www.w3.org/2000/svg">
+        <path d="M5.49762 12H18.5027" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M5.49762 16.0017H18.5027" stroke="white" stroke-width="1.5" stroke-linecap="round"
+              stroke-linejoin="round"/>
+        <path d="M5.49731 7.99832H18.5024" stroke="white" stroke-width="1.5" stroke-linecap="round"
+              stroke-linejoin="round"/>
+      </svg>
       <a href="#">
         <img class="h-14" src="img/logo.png" alt="logo">
       </a>
-      <nav class="text-white/60 flex items-center gap-16">
-        <a class="uppercase text-base tracking-wide" href="#">Product</a>
-        <a class="uppercase text-base tracking-wide" href="#">Explore</a>
-        <a class="uppercase text-base tracking-wide" href="#">Save & Share</a>
-        <a class="uppercase text-base tracking-wide" href="#">AI Analysis</a>
+      <nav class="text-white/60 hidden lg:flex items-center gap-16">
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">Product</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">Explore</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">Save & Share</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">AI Analysis</a>
       </nav>
+      <div></div>
     </div>
-    <button class="uppercase bg-white/10 px-8 text-white h-10 z-10 text-sm font-bold tracking-wider">Get Member Access
+    <button
+      class="hidden lg:block uppercase bg-white/10 px-8 text-white h-10 z-10 text-sm font-bold tracking-wider hover:bg-white hover:text-black-900 transition">
+      Get Member Access
     </button>
     <div class="bg-purple-700 blur-[50px] absolute right-28 -bottom-28 z-0 w-[200px] h-[200px]"></div>
   </header>
 </div>
 <main>
-  <section class="mt-20 mx-auto max-w-[1200px]">
-    <div class="flex items-center justify-between">
+  <section class="mt-6 lg:mt-20 mx-auto max-w-[1200px] px-6 lg:px-0">
+    <div class="flex flex-col lg:flex-row lg:items-center justify-between">
       <div class="flex items-center gap-4">
         <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M22.0002 10.6667L17.3335 16L22.0002 21.3333" stroke="white" stroke-width="2" stroke-linecap="round"
@@ -62,21 +74,21 @@
           <path d="M11.3332 21.3333L11.3332 10.6667" stroke="white" stroke-width="2" stroke-linecap="round"
                 stroke-linejoin="round"/>
         </svg>
-        <h1 class="uppercase text-[40px]">
+        <h1 class="uppercase text-2xl lg:text-[40px]">
           Categories
         </h1>
       </div>
-      <div class="flex items-center gap-2">
-        <button class="flex items-center gap-2 uppercase px-8 h-10 text-base font-bold tracking-wider text-green-900">
+      <div class="flex justify-center items-center gap-2 mt-6 lg:mt-0">
+        <button class="flex justify-center w-full items-center gap-2 uppercase px-8 h-10 text-base font-bold tracking-wider text-green-900 whitespace-nowrap">
           Clear All
         </button>
         <button
-          class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-8 h-10 text-base font-bold tracking-wider">
-          Save Changes
+          class="flex w-full justify-center items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-8 h-10 text-base font-bold tracking-wider">
+          Save
         </button>
       </div>
     </div>
-    <div class="grid grid-cols-6 gap-8 mt-16">
+    <div class="grid grid-cols-2 lg:grid-cols-6 gap-4 lg:gap-8 mt-12 lg:mt-16">
       <div
         class="w-full h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
         Mystic Axie
@@ -103,10 +115,10 @@
       </div>
     </div>
   </section>
-  <section class="mt-32 border-y border-solid border-white/10 w-full">
-    <div class="mx-auto max-w-[1200px] flex justify-between py-16">
-      <div class="flex items-center gap-6">
-        <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <section class="mt-20 lg:mt-32 border-y border-solid border-white/10 w-full">
+    <div class="mx-auto max-w-[1200px] flex flex-col lg:flex-row justify-between lg:items-center px-6 lg:px-0 py-8 lg:py-16">
+      <div class="flex flex-col lg:flex-row lg:items-center gap-6 mb-6 lg:mb-0">
+        <svg class="w-14 h-14 lg:w-20 lg:h-20" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M51.5001 38.5005C51.5001 39.6498 51.0435 40.752 50.2309 41.5646C49.4182 42.3773 48.316 42.8338 47.1667 42.8338H21.1667L12.5001 51.5005V16.8338C12.5001 15.6846 12.9566 14.5823 13.7693 13.7697C14.5819 12.957 15.6841 12.5005 16.8334 12.5005H47.1667C48.316 12.5005 49.4182 12.957 50.2309 13.7697C51.0435 14.5823 51.5001 15.6846 51.5001 16.8338V38.5005Z"
             stroke="white" stroke-width="4.4443" stroke-linecap="round" stroke-linejoin="round"/>
@@ -120,18 +132,18 @@
         </div>
       </div>
       <button
-        class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
+        class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider w-fit">
         Member Access
       </button>
     </div>
   </section>
 </main>
 <footer class="border-y border-solid border-white/10 w-full">
-  <div class="mx-auto max-w-[1200px] flex justify-between py-16">
+  <div class="mx-auto max-w-[1200px] flex flex-col lg:flex-row justify-between gap-8 py-8 px-6 lg:px-0 lg:py-16">
     <div class="text-sm text-white/60">Copyright © 2024 Chainmind. All rights reserved.</div>
     <div class="text-sm text-white/60 flex items-center gap-10">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Use</a>
+      <a class="hover:text-white transition" href="#">Privacy Policy</a>
+      <a class="hover:text-white transition" href="#">Terms of Use</a>
     </div>
   </div>
 </footer>
