--- a/modal-1.html
+++ b/modal-1.html
@@ -34,10 +34,10 @@
 
 <body class="bg-[#4C4CA6]/30 backdrop-blur-md h-screen">
 <div
-  class="fixed top-1/2 left-1/2 bg-[#06020C] w-full max-w-[995px] -translate-x-1/2 -translate-y-1/2 overflow-hidden mt-20">
-  <div class="flex mb-8 text-white">
-    <img class="h-96 w-96 min-w-96 border border-solid border-white/5" src="img/placeholder.png" alt="">
-    <div class="p-8 w-full flex flex-col justify-between">
+  class="fixed top-1/2 left-1/2 bg-[#06020C] w-full max-w-[995px] -translate-x-1/2 -translate-y-1/2 overflow-hidden mt-96 lg:mt-20">
+  <div class="flex flex-col lg:flex-row lg:mb-8 text-white">
+    <img class="h-96 w-full lg:w-96 lg:min-w-96 border border-solid border-white/5" src="img/placeholder.png" alt="">
+    <div class="p-5 lg:p-8 w-full flex flex-col justify-between">
       <div>
         <div class="flex items-center">
           <img class="w-8 h-8 mr-4" src="img/nft.png" alt="">
@@ -51,7 +51,7 @@
         </div>
         <div class="flex items-center justify-between mt-6">
           <div class="text-2xl font-semibold">Puff Genesis #187</div>
-          <button class="flex items-center gap-2 py-2 px-8 border border-solid border-white/5">
+          <button class="flex items-center gap-2 py-2 px-2 lg:px-8 border border-solid border-white/5">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M16 19C17.1046 19 18 18.1046 18 17C18 15.8954 17.1046 15 16 15C14.8954 15 14 15.8954 14 17C14 18.1046 14.8954 19 16 19Z"
@@ -67,7 +67,7 @@
               <path d="M13.5 7.5L8.5 10.5" stroke="white" stroke-width="1.5" stroke-linecap="round"
                     stroke-linejoin="round"/>
             </svg>
-            Share
+            <span class="hidden lg:inline-block">Share</span>
           </button>
         </div>
         <div class="flex items-center gap-2 mt-6 font-medium">
@@ -81,7 +81,7 @@
           </svg>
         </div>
       </div>
-      <div class="flex items-center justify-between">
+      <div class="flex flex-col lg:flex-row lg:items-center justify-between gap-6 lg:gap-0 mt-8 lg:mt-0">
         <div class="flex items-center gap-4">
           <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_266_4333)">
@@ -105,7 +105,7 @@
           </div>
         </div>
         <button
-          class="flex items-center gap-4 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
+          class="flex justify-center items-center gap-4 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
           Buy Now
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.5 8.0002L11 12.0002L7.5 16.0002" stroke="white" stroke-width="1.5" stroke-linecap="round"
@@ -212,7 +212,6 @@
           </svg>
         </div>
         <div class="h-14 w-14 flex items-center justify-center text-green-900 bg-gray-900/5 cursor-pointer">1</div>
-        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">2</div>
         <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
           <svg width="20" height="6" viewBox="0 0 20 6" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -220,7 +219,6 @@
               fill="white" fill-opacity="0.64"/>
           </svg>
         </div>
-        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">9</div>
         <div class="h-14 w-14 flex items-center justify-center cursor-pointer">10</div>
         <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
