--- a/modal-1.html
+++ b/modal-1.html
@@ -139,67 +139,152 @@
       </div>
     </div>
     <div class="text-white/50 uppercase mb-2 font-medium">Activity:</div>
-    <div class="relative overflow-x-auto">
-      <table class="w-full text-sm font-semibold">
-        <thead class="text-xs text-white/50 uppercase bg-gray-900/5 text-left">
-        <tr>
-          <th scope="col" class="px-4 py-2">
-            Item
-          </th>
-          <th scope="col" class="px-4 py-2">
-            Event
-          </th>
-          <th scope="col" class="px-4 py-2">
-            Price
-          </th>
-          <th scope="col" class="px-4 py-2">
-            From
-          </th>
-          <th scope="col" class="px-4 py-2">
-            To
-          </th>
-          <th scope="col" class="px-4 py-2">
-            Date
-          </th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr class="text-white border-b border-b-white/5 whitespace-nowrap">
-          <td class="flex items-center gap-4 font-medium py-4 px-8 min-w-fit">
+    <div>
+      <div class="relative overflow-x-auto hidden lg:block">
+        <table class="w-full text-sm font-semibold">
+          <thead class="text-xs text-white/50 uppercase bg-gray-900/5 text-left">
+          <tr>
+            <th scope="col" class="px-4 py-2">
+              Item
+            </th>
+            <th scope="col" class="px-4 py-2">
+              Event
+            </th>
+            <th scope="col" class="px-4 py-2">
+              Price
+            </th>
+            <th scope="col" class="px-4 py-2">
+              From
+            </th>
+            <th scope="col" class="px-4 py-2">
+              To
+            </th>
+            <th scope="col" class="px-4 py-2">
+              Date
+            </th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr class="text-white border-b border-b-white/5 whitespace-nowrap">
+            <td class="flex items-center gap-4 font-medium py-4 px-8 min-w-fit">
+              <img class="border border-solid border-white/5 w-12 h-12" src="img/placeholder.png" alt="placeholder">
+              Puff Genesis #187
+            </td>
+            <td class="py-4 px-8">
+              Transfer
+            </td>
+            <td class="py-4 px-8">
+              -
+            </td>
+            <td class="py-4 px-8">
+              0x9bd1...33DD
+            </td>
+            <td class="py-4 px-8">0x9bd1...33DD</td>
+            <td class="py-4 px-8">2024-02-24 23:36 (UTC)</td>
+          </tr>
+          <tr class="text-white border-b border-b-white/5 whitespace-nowrap">
+            <td class="flex items-center gap-4 font-medium py-4 px-8 min-w-fit">
+              <img class="border border-solid border-white/5 w-12 h-12" src="img/placeholder.png" alt="placeholder">
+              Puff Genesis #187
+            </td>
+            <td class="py-4 px-8">
+              Transfer
+            </td>
+            <td class="py-4 px-8">
+              -
+            </td>
+            <td class="py-4 px-8">
+              0x9bd1...33DD
+            </td>
+            <td class="py-4 px-8">0x9bd1...33DD</td>
+            <td class="py-4 px-8">2024-02-24 23:36 (UTC)</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="grid grid-cols-1 gap-6 lg:hidden">
+        <div class="text-white">
+          <div class="flex items-center gap-4 font-medium">
             <img class="border border-solid border-white/5 w-12 h-12" src="img/placeholder.png" alt="placeholder">
             Puff Genesis #187
-          </td>
-          <td class="py-4 px-8">
-            Transfer
-          </td>
-          <td class="py-4 px-8">
-            -
-          </td>
-          <td class="py-4 px-8">
-            0x9bd1...33DD
-          </td>
-          <td class="py-4 px-8">0x9bd1...33DD</td>
-          <td class="py-4 px-8">2024-02-24 23:36 (UTC)</td>
-        </tr>
-        <tr class="text-white border-b border-b-white/5 whitespace-nowrap">
-          <td class="flex items-center gap-4 font-medium py-4 px-8 min-w-fit">
+          </div>
+          <div class="flex items-center justify-between text-sm font-medium mt-4">
+            <div>Transfer</div>
+            <div>5.50 ETH</div>
+          </div>
+          <div class="flex items-center justify-between text-sm font-medium mt-4">
+            <div class="flex flex-col">
+            <span>
+              0x9bd1...33DD
+            </span>
+              <span class="text-white/50 uppecase">From</span>
+            </div>
+            <div class="flex flex-col">
+            <span>
+              0x9bd1...33DD
+            </span>
+              <span class="text-white/50 uppecase text-right">To</span>
+            </div>
+          </div>
+          <div class="flex items-center justify-between text-sm font-medium mt-4">
+            <div>2024-02-24 23:36 (UTC)</div>
+          </div>
+        </div>
+        <div class="text-white">
+          <div class="flex items-center gap-4 font-medium">
             <img class="border border-solid border-white/5 w-12 h-12" src="img/placeholder.png" alt="placeholder">
             Puff Genesis #187
-          </td>
-          <td class="py-4 px-8">
-            Transfer
-          </td>
-          <td class="py-4 px-8">
-            -
-          </td>
-          <td class="py-4 px-8">
-            0x9bd1...33DD
-          </td>
-          <td class="py-4 px-8">0x9bd1...33DD</td>
-          <td class="py-4 px-8">2024-02-24 23:36 (UTC)</td>
-        </tr>
-        </tbody>
-      </table>
+          </div>
+          <div class="flex items-center justify-between text-sm font-medium mt-4">
+            <div>Transfer</div>
+            <div>5.50 ETH</div>
+          </div>
+          <div class="flex items-center justify-between text-sm font-medium mt-4">
+            <div class="flex flex-col">
+            <span>
+              0x9bd1...33DD
+            </span>
+              <span class="text-white/50 uppecase">From</span>
+            </div>
+            <div class="flex flex-col">
+            <span>
+              0x9bd1...33DD
+            </span>
+              <span class="text-white/50 uppecase text-right">To</span>
+            </div>
+          </div>
+          <div class="flex items-center justify-between text-sm font-medium mt-4">
+            <div>2024-02-24 23:36 (UTC)</div>
+          </div>
+        </div>
+        <div class="text-white">
+          <div class="flex items-center gap-4 font-medium">
+            <img class="border border-solid border-white/5 w-12 h-12" src="img/placeholder.png" alt="placeholder">
+            Puff Genesis #187
+          </div>
+          <div class="flex items-center justify-between text-sm font-medium mt-4">
+            <div>Transfer</div>
+            <div>5.50 ETH</div>
+          </div>
+          <div class="flex items-center justify-between text-sm font-medium mt-4">
+            <div class="flex flex-col">
+            <span>
+              0x9bd1...33DD
+            </span>
+              <span class="text-white/50 uppecase">From</span>
+            </div>
+            <div class="flex flex-col">
+            <span>
+              0x9bd1...33DD
+            </span>
+              <span class="text-white/50 uppecase text-right">To</span>
+            </div>
+          </div>
+          <div class="flex items-center justify-between text-sm font-medium mt-4">
+            <div>2024-02-24 23:36 (UTC)</div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="flex justify-center items-center mt-8">
       <div
